--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,6 +86,7 @@ services:
       - KUBERPULT_CHECK_CUSTOM_MIGRATIONS=false
       - KUBERPULT_GIT_TIMESTAMP_MIGRATIONS_ENABLED=false
       - KUBERPULT_OUTDATED_DEPLOYMENTS_CLEANING_ENABLED=true
+      - KUBERPULT_APPS_HISTORY_MIGRATION_ENABLED=true
       - KUBERPULT_RESET_GIT_SYNC_STATUS_ENABLED=false
       - KUBERPULT_ESL_PROCESSING_BACKOFF=1
       - KUBERPULT_FAIL_ON_ERROR_WITH_GIT_PUSH_TAGS=true
