rename custom migration to git2db migration

--- a/charts/kuberpult/templates/cd-service.yaml
+++ b/charts/kuberpult/templates/cd-service.yaml
@@ -265,8 +265,8 @@ spec:
           value: "{{ .Values.db.connections.cd.maxOpen }}"
         - name: KUBERPULT_DB_MAX_IDLE_CONNECTIONS
           value: "{{ .Values.db.connections.cd.maxIdle }}"
-        - name: KUBERPULT_CHECK_CUSTOM_MIGRATIONS
-          value: "{{ .Values.db.checkCustomMigrations }}"
+        - name: KUBERPULT_CHECK_GIT2DB_MIGRATIONS
+          value: "{{ .Values.db.checkGit2DBMigrations }}"
         - name: KUBERPULT_LOCK_TYPE
           value: "{{ .Values.cd.lockType }}"
 {{- end }}
