--- a/charts/kuberpult/templates/manifest-repo-export-service.yaml
+++ b/charts/kuberpult/templates/manifest-repo-export-service.yaml
@@ -245,8 +245,8 @@ spec:
           value: "{{ .Values.git.releaseVersionsLimit }}"
         - name: KUBERPULT_MINIMIZE_EXPORTED_DATA
           value: "{{ .Values.git.minimizeExportedData }}"
-        - name: KUBERPULT_CHECK_CUSTOM_MIGRATIONS
-          value: "{{ .Values.db.checkCustomMigrations }}"
+        - name: KUBERPULT_CHECK_GIT2DB_MIGRATIONS
+          value: "{{ .Values.db.checkGit2DBMigrations }}"
         - name: KUBERPULT_FAIL_ON_ERROR_WITH_GIT_PUSH_TAGS
           value: {{ .Values.manifestRepoExport.failOnErrorWithGitPushTags | quote }}
 
