--- a/services/frontend-service/package.json
+++ b/services/frontend-service/package.json
@@ -8,8 +8,8 @@
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.1",
     "@improbable-eng/grpc-web": "0.15.0",
-    "@material-ui/core": "5.0.0-alpha.34",
-    "@material-ui/icons": "5.0.0-alpha.34",
+    "@mui/material": "7.3.8",
+    "@mui/icons-material": "7.3.8",
     "@material/button": "14.0.0",
     "@material/card": "14.0.0",
     "@material/chips": "14.0.0",
