fix(helm): mark minimizeExportedData as deprecated
Ref: SRX-4WUGD6

--- a/charts/kuberpult/values.yaml
+++ b/charts/kuberpult/values.yaml
@@ -67,10 +67,9 @@ git:
   # Values outside of the range will fail the service during startup.
   releaseVersionsLimit: 20
 
+  # DEPRECATED: this parameter will default to "true" soon, and it will not be possible to set it to "false".
   # When minimizeExportedData==false, all data will be written to git, including meta information that is not relevant for argoCd, like locks.
   # When true, only the files needed for Argo CD to work are written.
-  # Note that when this option is true, in case of data loss in the database, kuberpult can *not* recover all information from the git repo.
-  # Recommendation: Only activate this option, if frequent database backups are made and if the git repo takes up too many resources.
   minimizeExportedData: false
 
   # The size of the volume that stores the local data for the git repository
