--- a/services/frontend-service/package.json
+++ b/services/frontend-service/package.json
@@ -26,6 +26,7 @@
     "react": "19.2.4",
     "react-dom": "19.2.4",
     "react-router-dom": "7.13.1",
+    "react-scripts": "5.0.1",
     "react-spinners": "0.17.0",
     "react-tooltip": "5.30.0",
     "react-use-sub": "4.0.1",
