--- a/services/frontend-service/package.json
+++ b/services/frontend-service/package.json
@@ -8,8 +8,8 @@
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.1",
     "@improbable-eng/grpc-web": "0.15.0",
-    "@material-ui/core": "5.0.0-alpha.34",
-    "@material-ui/icons": "5.0.0-alpha.34",
+    "@mui/material": "7.3.8",
+    "@mui/icons-material": "7.3.8",
     "@material/button": "14.0.0",
     "@material/card": "14.0.0",
     "@material/chips": "14.0.0",
@@ -19,7 +19,7 @@
     "@material/select": "14.0.0",
     "@material/textfield": "14.0.0",
     "@material/tooltip": "14.0.0",
-    "@peculiar/webcrypto": "1.4.5",
+    "@peculiar/webcrypto": "1.5.0",
     "@types/react-beforeunload": "2.1.5",
     "classnames": "2.5.1",
     "jwt-decode": "4.0.0",
@@ -28,9 +28,9 @@
     "react-router-dom": "6.25.0",
     "react-scripts": "5.0.1",
     "react-spinners": "0.13.8",
-    "react-tooltip": "5.26.0",
+    "react-tooltip": "5.30.0",
     "react-use-sub": "4.0.1",
-    "rxjs": "7.8.1"
+    "rxjs": "7.8.2"
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
@@ -45,11 +45,11 @@
     "scss-fix": "prettier --write --parser scss 'src/**/*.scss'"
   },
   "devDependencies": {
-    "@babel/core": "7.25.2",
-    "@babel/plugin-syntax-flow": "7.24.7",
+    "@babel/core": "7.29.0",
+    "@babel/plugin-syntax-flow": "7.28.6",
     "@babel/plugin-transform-react-jsx": "7.25.2",
-    "@testing-library/jest-dom": "6.4.0",
-    "@testing-library/react": "16.0.1",
+    "@testing-library/jest-dom": "6.9.1",
+    "@testing-library/react": "16.3.2",
     "@types/jest": "29.5.12",
     "@types/node": "20.11.10",
     "@types/react": "18.3.3",
@@ -58,19 +58,19 @@
     "browser-headers": "0.4.1",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-no-only-tests": "3.1.0",
+    "eslint-plugin-no-only-tests": "3.3.0",
     "eslint-plugin-no-type-assertion": "1.3.0",
-    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-prettier": "5.5.5",
     "google-protobuf": "3.21.2",
-    "long": "5.2.3",
-    "madge": "6.1.0",
-    "prettier": "3.2.4",
+    "long": "5.3.2",
+    "madge": "8.0.0",
+    "prettier": "3.8.1",
     "protobufjs": "7.2.6",
     "react-refresh": "0.14.2",
-    "sass": "1.70.0",
+    "sass": "1.97.3",
     "spy4js": "3.4.1",
     "ts-proto": "1.169.1",
-    "typescript": "5.4.3"
+    "typescript": "5.9.3"
   },
   "jest": {
     "collectCoverageFrom": [
