--- a/.github/workflows/execution-plan-main.yml
+++ b/.github/workflows/execution-plan-main.yml
@@ -9,7 +9,7 @@ name: "Execution Plan on main"
 # As of now, we do not want multiple "main" pipelines to run in parallel,
 # because the pipeline relies on stable git tags throughout the run.
 concurrency:
-  group: production-deploy
+  group: main
   cancel-in-progress: false
 
 jobs:
